<resources>
    <string name="app_name">HackathonApp</string>
    <string name="region">Region</string>
    <string name="filter">Lọc</string>
    <string name="teacher_name"><![CDATA[<b>Tên Gv:</b> %s]]></string>
    <string name="teacher_degree"><![CDATA[<b>Học vị:</b> %s]]></string>
    <string name="teacher_sex"><![CDATA[<b>Giới tính:</b> %s]]></string>
    <string name="teacher_experience"><![CDATA[<b>Kinh nghiệm:</b> %s năm]]></string>
    <string name="article_name"><![CDATA[<b>Lớp:</b> %s năm]]></string>
    <string name="article_price"><![CDATA[<b>Giá:</b> %s năm]]></string>
    <string name="article_time"><![CDATA[<b>Thời gian:</b> %s năm]]></string>
    <string name="article_region"><![CDATA[<b>Địa điểm:</b> %s năm]]></string>
    <string name="article_number_people"><![CDATA[<b>Số thành viên:</b> %s năm]]></string>
    <string name="article_description"><![CDATA[<b>Mô tả:</b> %s năm]]></string>
    <string name="phone">Gọi điện</string>
    <string name="sms">Nhắn tin</string>
    <string name="teacher_info_label">Thông tin giảng viên</string>
    <string name="article_info_label">Thông tin lớp học</string>
    <string name="contact_teacher_label">Liên hệ giảng viên</string>
    <string name="article_info">Thông tin lớp học</string>
    <string name="article_name_label">Tên lớp học</string>
    <string name="region_label">Khu vực</string>
    <string name="class_label">Lớp học</string>
    <string name="subject_label">Môn học</string>
    <string name="time_label">Thời gian</string>
    <string name="people_label">Số lượng người</string>
    <string name="price_label">Giá</string>
    <string name="description_label">Mô tả thêm</string>
    <string name="facebook_app_id">1654112671493191</string>
    <string name="loading">Đang tải</string>
    <string name="please_wait">Xin chờ trong giây lát...</string>
    <string name="retry">Có lỗi xảy ra, xin vui lòng tải lại.</string>
    <string name="error">Lỗi</string>
</resources>
