<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="1dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/rl_teacher_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/teacher_info_label"
                    android:textColor="#8f9297"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="#E1E1E1" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@+id/rl_teacher_info_label"
                android:id="@+id/rl_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />


                <LinearLayout
                    android:id="@+id/ll_profile_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_image"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/teacher_name" />

                    <TextView
                        android:id="@+id/tv_degree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/teacher_degree" />

                    <TextView
                        android:id="@+id/tv_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/teacher_sex" />

                    <TextView
                        android:id="@+id/tv_experience"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher_experience" />
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_below="@+id/rl_top"
                android:id="@+id/rl_article_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/article_info_label"
                    android:textColor="#8f9297"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="#E1E1E1" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_article_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_article_info_label"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_article_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    tools:text="Toán lớp 3" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ff0000"
                    tools:text="Giá: 1000.000đ" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ff0000"
                    tools:text="Giá: 1000.000đ" />


                <TextView
                    android:id="@+id/tv_article_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    tools:text="Toán lớp 3" />


                <TextView
                    android:id="@+id/tv_article_number_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    tools:text="Toán lớp 3" />

                <TextView
                    android:id="@+id/tv_article_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    tools:text="Toán lớp 3" />

            </LinearLayout>


            <RelativeLayout
                android:layout_below="@+id/ll_article_info"
                android:id="@+id/rl_contact_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/contact_teacher_label"
                    android:textColor="#8f9297"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="#E1E1E1" />

            </RelativeLayout>

            <LinearLayout
                android:layout_below="@+id/rl_contact_label"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/phone"/>

                <Button
                    android:id="@+id/btn_sms"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sms"/>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</android.support.v7.widget.CardView>